chore(docs): add deploy guide for Next.js on vercel in `docs/deploy`

--- a/src/app/docs/mdx/page.mdx
+++ b/src/app/docs/mdx/page.mdx
@@ -1,4 +1,5 @@
 import { Code } from "@/ui/code"
+import { mdx } from "@/lib/code"
 
 # Next.js MDX
 
@@ -12,9 +13,9 @@ about structural content or components.
 <Code
     lang="bash"
     code={`
-npm install @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
-# or
-pnpm add @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
+  npm install @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
+  # or
+  pnpm add @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
 `}
 />
 
@@ -24,33 +25,8 @@ To ensure compatibility with MDX, follow these steps to enable the necessary ext
 
 ### Setup `next.config.ts` file
 
-<Code
-  lang="ts"
-  code={`
-  import type { NextConfig } from "next"
-  import createMDX from "@next/mdx"
-
-  const nextConfig: NextConfig = {
-    pageExtensions: ["js", "jsx", "ts", "tsx", "md", "mdx"],
-  } 
-
-  const withMDX = createMDX({
-    options: {},
-  })
-
-  export default withMDX(nextConfig)
-  `}
-/>
+<Code lang="ts" code={mdx.nextConfig} />
 
 ### Add `mdx-components.tsx` file
 
-<Code 
-  lang="ts"
-  code={`
-  import type { MDXComponents } from "mdx/types"
-
-  export function useMDXComponents(components: MDXComponents): MDXComponents {
-    return { ...components }
-  }
-  `}
-/>
+<Code lang="tsx" code={mdx.mdxComponents} />
