--- a/src/app/docs/mdx/page.mdx
+++ b/src/app/docs/mdx/page.mdx
@@ -10,14 +10,7 @@ about structural content or components.
 
 ## Installation
 
-<Code
-    lang="bash"
-    code={`
-  npm install @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
-  # or
-  pnpm add @next/mdx @mdx-js/loader @mdx-js/react @types/mdx
-`}
-/>
+<Code lang="bash" code={mdx.installation} />
 
 ## Configuration
 
